--- a/estore-gateway-service.yml
+++ b/estore-gateway-service.yml
@@ -17,4 +17,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+      defaultZone: http://estore-discovery-service:8761/eureka/
