--- a/estore-order-service.yml
+++ b/estore-order-service.yml
@@ -6,4 +6,4 @@ eureka:
     instance-id: ${spring.application.name}:${random.uuid}
   client:
     serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+      defaultZone: http://estore-discovery-service:8761/eureka/
