some slushy config changes

--- a/estore-gateway-service.yml
+++ b/estore-gateway-service.yml
@@ -13,3 +13,8 @@ server:
     enabled: true
     mime-types: application/json,text/css,application/javascript
     min-response-size: 2048
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
