--- a/estore-order-service.yml
+++ b/estore-order-service.yml
@@ -4,3 +4,6 @@ eureka:
   instance:
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
