--- a/estore-user-services.yml
+++ b/estore-user-services.yml
@@ -4,3 +4,6 @@ eureka:
   instance:
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
+ribbon:
+  eureka:
+    enabled: true
